# QAddrBundle

./: CMakeLists.txt  Config.cmake.in  README.md  qaddr_bundle.cpp
.github/workflows/: build-actions.yml  build-test-install.yml
include/: qaddr_bundle.hpp
qml/: TextAmount.qml
